--- a/showeq/trunk/ChangeLog
+++ b/showeq/trunk/ChangeLog
@@ -1,3 +1,15 @@
+ieatacid (8/24/09)
+-----------------
+- Updated version to 5.13.6.1
+- Fixed buffer overflow in interface.cpp
+
+ieatacid (8/20/09)
+-----------------
+- Updated version to 5.13.6
+- Updated opcodes
+- Updated structs
+- Updated source code where necessary
+
 ieatacid (6/20/09)
 -----------------
 - Updated version to 5.13.5
